[gd_scene load_steps=4 format=3 uid="uid://bg8oqn1evsdny"]

[ext_resource type="Script" uid="uid://cp4o7se0sl80o" path="res://ui/leaderboard/leaderboardentry.gd" id="1_7a2a4"]
[ext_resource type="Resource" uid="uid://2xygnu4afrrp" path="res://ui/leaderboard/example_data/example_leaderboard_entry.tres" id="2_sjq81"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjq81"]
bg_color = Color(0.690196, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="LeaderboardEntry" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7a2a4")
leaderboard_entry_data = ExtResource("2_sjq81")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PlacingLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PlayerName"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "60000"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "5:11"

[node name="DeleteButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_sjq81")
text = "Delete"

[node name="IDLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer2/DeleteButton" to="." method="_on_delete_button_pressed"]
